GitVersion1/objects/CDH_Owner_Security__c.object
<CustomObject>
    <description>NOT USED (kept for archiving)

Links Account to proper territory in external systems
- also reduces calls from external systems (i.e. BI)</description>
    <fields>
        <fullName>CDH_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDH Account</label>
        <referenceTo>CDH_Account__c</referenceTo>
        <relationshipName>CDH_Owner_Security</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_External_Territory_Id__c</fullName>
        <formula>CDH_Territory__r.CDH_External_Territory_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Territory Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Manager__c</fullName>
        <description>Manager of Sales Person (Primary Account Owner)...  Used for BI</description>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Primary_Account_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDH_TeamUserID__c</fullName>
        <formula>CDH_Account__r.Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDH_TeamUserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDH_Owner_Security</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDH_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDH Territory</label>
        <referenceTo>CDH_Territory__c</referenceTo>
        <relationshipName>CDH_Owner_Security</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CDH Owner/Security - To be Removed</label>
    <nameField>
        <displayFormat>CDHO-{00000}</displayFormat>
        <label>CDH Owner/Security #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CDH Owner/Security</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>